--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^6.10.0",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
+    "ts-spinner": "^1.0.0",
     "typescript": "^5.3.3",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
