--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open",
     "build": "webpack",
-    "deploy": "gh-pages -d dist",
-    "predeploy": "yarn build"
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [
     "typescript",
